--- a/fidouafclient/app/src/main/res/layout/activity_settings.xml
+++ b/fidouafclient/app/src/main/res/layout/activity_settings.xml
@@ -104,6 +104,7 @@
                 android:layout_marginTop="1dp"
                 android:ems="10"
                 android:inputType="text"
+                android:singleLine="false"
                 android:textSize="9sp" />
 
             <!-- Field -->
